--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 		</div>
 	</div>
 	<div id ="explore">
-		<div id ="defs-ico"><p id ="defs">From Kenyan Streets To The Global Stage.</p></div>
+		<div id ="defs-ico"><p id ="defs">From Kenyan Streets To The International Stage.</p></div>
 		<div id ="music-ico">
 			<div id ="music"><p id ="musicc">Music</p></div>			
 			<div id ="music-sounds"><p id ="sounds">Sounds</p></div>
