--- a/index.html
+++ b/index.html
@@ -347,7 +347,111 @@
 	</div>
 
 </div>
-<div id="navright"></div>
+<div id="navright">
+	<div id="navright-close">
+		<div id="close">
+			<svg id="closesvg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34.65 29.76">
+			<defs>
+				<style>
+					.cls-1q{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}
+					  .cls-1q{stroke-dasharray: 500; stroke-dashoffset:0; animation:menuclosed 3s linear forwards;animation-iteration-count: 1;}
+					.cls-1qq{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}
+					  .cls-1qq{stroke-dasharray: 500; stroke-dashoffset:-500; animation:menuclose 2s linear forwards;animation-delay:1s;animation-iteration-count: 1;}
+
+					  	</style>
+			</defs>
+			<line class="cls-1q" x1="0.32" y1="29.38" x2="34.32" y2="0.38"/>
+			<line class="cls-1qq" x1="0.32" y1="0.38" x2="34.32" y2="29.38"/>
+		</svg>
+		</div>
+	</div>
+	<div id="hidsearch">
+		<div id="hidsearch-ico">
+			<svg id="searchit" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 16.5">
+						<defs>
+							<style>.clsa-1,.clsa-2{fill:none;stroke-width:2px;stroke-miterlimit:10;}
+								.clsa-1{stroke:#0099ff;stroke-width:2px;}
+    							.clsa-1{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 4s linear forwards;animation-iteration-count: infinite;}
+								.clsa-2{stroke:#0099ff;stroke-width:1px;}
+
+
+							</style>
+						</defs>
+						<g id="Layer_2" data-name="Layer 2">
+						<g id="Layer_1-2" data-name="Layer 1"><path class="clsa-1" d="M13.13,9.92l3.97,3.76"/><circle class="clsa-2" cx="10" cy="7" r="5.5"/>
+						</g>
+						</g>
+				</svg>
+		</div>
+		<div id="hidsearchit">
+			<input type="text" name="" id="w3-input" placeholder="search ...">
+		</div>
+	</div>
+	<div id="hidlogo">
+		<div id="hidlogo-ico">
+			<svg id="logos" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+								 viewBox="0 0 595.3 841.9" style="enable-background:new 0 0 595.3 841.9;" xml:space="preserve">
+								<style type="text/css">
+									.st0a{fill:none;stroke:#999;stroke-width:40;stroke-miterlimit:10;}
+									.st0a:hover{stroke:#0099ff;}
+									.st1a{fill:none;stroke:#999;stroke-width:38;stroke-miterlimit:10;}
+									.st1a:hover{stroke:#0099ff;}
+									.st2a{fill:none;stroke:#999;stroke-width:33;stroke-miterlimit:10;}
+									.st2a:hover{stroke:#0099ff;}
+									.st3a{fill:none;stroke:#999;stroke-width:22;stroke-miterlimit:10;}
+									.st3a:hover{stroke:#0099ff;}
+								</style>
+								<path class="st0a" d="M210,391.4c20.4,9.7,47.6,19.8,80.5,24.7c79.1,11.8,142.9-13.2,171.8-27"/>
+								<path class="st1a" d="M462.4,389.2c-37.2,15.6-98.1,46.7-156,106.3c-62.5,64.2-92.3,131.5-106.2,170.3"/>
+								<path class="st2a" d="M274,708.2c-2.2-7.7-6.2-25.2-0.6-46.2c6.9-26.1,24.1-40.9,30.2-45.7"/>
+								<path class="st0a" d="M466.5,626.8c-18,8.3-55.3,22.3-103.1,18.2c-35.1-3-62.1-14.5-78.2-23.1"/>
+								<path class="st0a" d="M177.2,349.6c-21.8,21.1-47.2,50.4-69,89.3C56.6,531,56.5,621.1,59.5,664.3"/>
+								<path class="st0a" d="M488.9,183.4C420.6,192.2,294.1,219.7,199,322c-14.9,16-27.7,32.5-38.7,48.8"/>
+								<path class="st0a" d="M470.9,378.1c-83.2-85.8-214.7-87.2-287.9-19.5c-81.9,75.7-81,228.8,24.3,313.4"/>
+								<path class="st0a" d="M461.7,367.7c9.8,11.6,62.5,76.4,49.6,161.9c-14.9,98.3-109,167.9-192.6,170c-21.5,0.5-39.8-3.4-53.4-7.7"/>
+								<path class="st3a" d="M204.8,689.1c0.3-4.9,1-10.7,2.6-17.2c2-8,4.7-14.6,7.3-19.6"/>
+							</svg>
+		</div>
+		<div id="hidlogo-content">
+			Explore...
+		</div>
+	</div>
+	<div id="hidplay">
+		<div id="hidplay-ico">
+			<svg id="playitt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14.25 17.42">
+    						<defs>
+        					<style>.cls-1,.cls-2,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7{fill:none;stroke-miterlimit:10;stroke-width:0.9px;}
+        					.cls-1{stroke:#0099ff;}
+
+        					.cls-2{stroke:#0099ff;}
+
+        					.cls-3{stroke:#0099ff;}
+
+        					.cls-4{stroke:#0099ff;}
+
+
+        					.cls-5{stroke:#0099ff;}
+
+        					.cls-6{stroke:#0099ff;}
+
+        					.cls-7{stroke:#0099ff;}
+
+
+
+        					</style>
+    						</defs>
+    						<g id="Layer_2" data-name="Layer 2">
+        					<g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M.1,1.1v15"/><line class="cls-1" x1="2.1" y1="1.1" x2="2.1" y2="15.1"/><path class="cls-2" d="M.1,1.1a1,1,0,0,1,2,0"/><path class="cls-3" d="M2.1,15.1l9.44-6.61"/><path class="cls-3" d="M3.1,17.1l10-7"/><path class="cls-4" d="M.1,16.1a2.29,2.29,0,0,0,1,1,2.4,2.4,0,0,0,2,0"/><path class="cls-5" d="M11.51,8.75,5,4.86"/><path class="cls-5" d="M13.35,7.1,5.77,2.77"/><path class="cls-6" d="M13.1,7a1.76,1.76,0,0,1,1,1.1,1.83,1.83,0,0,1-1,2"/><path class="cls-7" d="M6.1,2.92c-.85-.5-1.74-.39-2,0s0,1.43,1,2"/>
+        					</g>
+    						</g>
+						</svg>
+		</div>
+		<div id="hidplay-content">
+			PlayList...
+		</div>
+	</div>
+
+</div>
 
 <div id ="middlebar">
 	<div id ="name">
@@ -356,7 +460,7 @@
 				<svg  id="name-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 			viewBox="0 0 230 150" style="enable-background:new 0 0 200 150;" xml:space="preserve">
 					<style type="text/css">
-						.st0z{fill:#fff;}
+						.st0z{fill:#ffff;}
 						.st1z{font-family:'Elephant-Regular';}
 						.st2z{font-size:30px;
 						font-weight:bold;
@@ -408,7 +512,7 @@
 		<p>Copyright © Dj | Teenez | 2020</p>
 	</div>
 	<div id ="developer-terms">
-		<div id ="developer" class="shadow"><p>About Developer</p></div>
+		<div id ="developer" class="shadow"><p>Developer</p></div>
 		<div id ="terms" class="shadow"><p>Terms of Use</p></div>
 	</div>
 </div>
@@ -440,20 +544,33 @@
 
 
 
-			$("#pre-loader").fadeOut();
-			$("#topnav").fadeIn();
-			$("#navleft").fadeIn();
+			$("#pre-loader").delay(2000).fadeOut();
+		if (innerWidth < 750) {	
 
-		// if (innerWidth < 750) {$("#navright").fadeIn();}	
+			$("#topnav").delay(2000).fadeIn().animate({top:"10px"});
+
+		}else{
+			$("#topnav").delay(2000).fadeIn().animate({top:"15px"});
+
+
+		}
+
+
+
+			$("#navleft").delay(2000).fadeIn();
+
+		if (innerWidth < 750) {
+			$("#navright").fadeIn();
+		}	
 			
-			$("#middlebar").fadeIn();
-			$("#bottomnav").fadeIn();
+			$("#middlebar").delay(2000).fadeIn();
+			$("#bottomnav").delay(2400).fadeIn().animate({bottom:"0"});
 
 
 
-			$("#name-svg").delay(2000).animate({top:"50%"});
+			$("#name-svg").delay(4000).animate({top:"50%"});
 
-			$("#defs-ico").delay(2000).animate({top:"0%"});
+			$("#defs-ico").delay(4000).animate({top:"0%"});
 
 
 
@@ -461,6 +578,33 @@
 
 				$("#menu").click(function(e){
 					e.preventDefault(); 
+
+
+			$("#close").delay(1000).fadeOut();	
+
+
+			$("#hidsearch-ico").delay(1500).animate({top:"100%"}).fadeOut();
+
+			$("#hidsearchit").delay(1800).animate({top:"100%"}).fadeOut();
+
+
+
+			$("#hidlogo-ico").delay(2100).animate({top:"100%"}).fadeOut();
+
+			$("#hidlogo-content").delay(2400).animate({top:"100%"}).fadeOut();
+
+
+			$("#hidplay-ico").delay(2700).animate({top:"100%"}).fadeOut();
+
+			$("#hidplay-content").delay(3000).animate({top:"100%"}).fadeOut();
+
+
+			$("#navright").delay(3300).animate({height:"0px"});
+
+
+
+			
+
 
 						$("#menu").delay(1000).fadeOut();
 						$("#menu1").fadeIn();
@@ -531,9 +675,9 @@
 
 						if (innerHeight>500) {
 						$("#home").delay(500).animate({height:"75%"},{duration:1000});
-						}else if(innerHeight>400){
+						}else if(innerHeight>350){
 
-						$("#home").delay(500).animate({height:"70%"},{duration:1000});
+						$("#home").delay(500).animate({height:"65%"},{duration:1000});
 
 						}else{
 						$("#home").delay(500).animate({height:"60%"},{duration:1000});
@@ -650,7 +794,115 @@ $("#toggle").click(function(e){
 		$("#volume").delay(750).fadeIn("slow");
 	}
 
+	else if (innerWidth<750) {
+		$("#navright").delay(1000).animate({height:"240px"});
+
+
+
+			$("#hidsearch-ico").delay(1500).fadeIn().animate({top:"0"});
+
+			$("#hidsearchit").delay(1800).fadeIn().animate({top:"0"});
+
+
+
+			$("#hidlogo-ico").delay(2100).fadeIn().animate({top:"0"});
+
+			$("#hidlogo-content").delay(2400).fadeIn().animate({top:"0"});
+
+
+			$("#hidplay-ico").delay(2700).fadeIn().animate({top:"0"});
+
+			$("#hidplay-content").delay(3000).fadeIn().animate({top:"0"});
+
+
+
+			$("#close").delay(1000).fadeIn();
+
+
+	}
+
 });
+
+
+$("#toggle").click(function(e){
+
+
+
+					if (hidhomecounter==1) {
+
+							hidhomecounter=0;
+							$("#home").delay(400).animate({height:"1%"},{duration:700});
+
+							$("#home").delay(400).animate({width:"0%"},{duration:700}).fadeOut();	
+
+										$("#name-svg").delay(2500).animate({top:"50%"});
+
+										$("#defs-ico").delay(2500).animate({top:"0%"});	
+				
+						}
+
+
+
+
+	if (innerHeight<350) {
+		$("#navright").delay(1000).animate({height:"180px"});
+
+
+
+			$("#hidsearch-ico").delay(1500).fadeIn().animate({top:"0"});
+
+			$("#hidsearchit").delay(1800).fadeIn().animate({top:"0"});
+
+
+
+			$("#hidlogo-ico").delay(2100).fadeIn().animate({top:"0"});
+
+			$("#hidlogo-content").delay(2400).fadeIn().animate({top:"0"});
+
+
+			$("#hidplay-ico").delay(2700).fadeIn().animate({top:"0"});
+
+			$("#hidplay-content").delay(3000).fadeIn().animate({top:"0"});
+
+
+
+			$("#close").delay(1000).fadeIn();	
+
+	}
+});
+
+
+
+$("#close").click(function(e){
+
+	e.preventDefault();
+
+		$("#close").delay(1000).fadeOut();	
+
+
+			$("#hidsearch-ico").delay(1500).animate({top:"100%"}).fadeOut();
+
+			$("#hidsearchit").delay(1800).animate({top:"100%"}).fadeOut();
+
+
+
+			$("#hidlogo-ico").delay(2100).animate({top:"100%"}).fadeOut();
+
+			$("#hidlogo-content").delay(2400).animate({top:"100%"}).fadeOut();
+
+
+			$("#hidplay-ico").delay(2700).animate({top:"100%"}).fadeOut();
+
+			$("#hidplay-content").delay(3000).animate({top:"100%"}).fadeOut();
+
+
+			$("#navright").delay(3300).animate({height:"0px"});
+
+
+
+});
+
+
 
 
 $("#playit").click(function(){
