--- a/index.html
+++ b/index.html
@@ -460,8 +460,21 @@
 				<svg  id="name-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 			viewBox="0 0 230 150" style="enable-background:new 0 0 200 150;" xml:space="preserve">
 					<style type="text/css">
+
+						@font-face {
+    font-family: 'Elephant';
+    src: url('Elephant-Regular.eot');
+    src: url('Elephant-Regular.eot?#iefix') format('embedded-opentype'),
+        url('Elephant-Regular.woff2') format('woff2'),
+        url('Elephant-Regular.woff') format('woff'),
+        url('Elephant-Regular.ttf') format('truetype'),
+        url('Elephant-Regular.svg#Elephant-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
 						.st0z{fill:#ffff;}
-						.st1z{font-family:'Elephant-Regular';}
+						.st1z{font-family:'Elephant';}
 						.st2z{font-size:30px;
 						font-weight:bold;
 						}
@@ -473,9 +486,9 @@
 							fill:none;}
 
 					</style>
-						<text transform="matrix(1.4459 0 0 1 14 86.2173)" class="st0z st1z st2z">Dj | Teenez </text>
+						<text transform="matrix(1.4459 0 0 1 -10 86.2173)" class="st0z st1z st2z">Dj | Teenez </text>
 						<rect class="st7z" x="182" y="27" class="st3" width="27" height="24"/>
-						<text transform="matrix(1 0 0 1 222 67.2061)" class="st1z st4z">®</text>
+						<text transform="matrix(1 0 0 1 242 64.2061)" class="st1z st4z">®</text>
 				</svg>
 
 		</div>
@@ -908,7 +921,7 @@ $("#close").click(function(e){
 $("#playit").click(function(){
 
 
-		$('head').append('<style>.cls-1{stroke-dasharray: 500; stroke-dashoffset:500; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-2{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-3{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-4{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-5{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-6{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}</style>');
+		$('head').append('<style>.cls-1{stroke-dasharray: 500; stroke-dashoffset:500; animation:dash 2s linear forwards;animation-iteration-count: 1;}    					.cls-2{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-3{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-4{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-5{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}    						.cls-6{stroke-dasharray: 500; stroke-dashoffset:0; animation:dash 2s linear forwards;animation-iteration-count: 1;}</style>');
 
 });
 
