--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
 					<style type="text/css">
 
 						.st0z{fill:#ffff;}
-						.st1z{font-family:'Elephant';}
+						.st1z{font-family:'Elephant-Regular';}
 						.st2z{font-size:30px;
 						font-weight:bold;
 						}
@@ -474,9 +474,9 @@
 							fill:none;}
 
 					</style>
-						<text transform="matrix(1.4459 0 0 1 -10 86.2173)" class="st0z st1z st2z">Dj | Teenez </text>
+						<text transform="matrix(1.4459 0 0 1 14 86.2173)" class="st0z st1z st2z">Dj | Teenez </text>
 						<rect class="st7z" x="182" y="27" class="st3" width="27" height="24"/>
-						<text transform="matrix(1 0 0 1 242 64.2061)" class="st1z st4z">®</text>
+						<text transform="matrix(1 0 0 1 222 67.2061)" class="st1z st4z">®</text>
 				</svg>
 
 		</div>
