--- a/index.html
+++ b/index.html
@@ -461,7 +461,8 @@
 	 			viewBox="0 0 230 170" style="enable-background:new 0 0 200 170;" xml:space="preserve">
 					<style type="text/css">
 
-						.st0z{fill:#ffff;}
+						.st0z{fill:#ffff; 
+	 						}
 						.st1z{font-family:'Elephant-Regular';}
 						.st2z{font-size:30px;
 						font-weight:bold;
@@ -550,7 +551,20 @@
 			<img class="img-responsive1" src="media/13.jpg">
 		</div>
 		<div id ="productshome">
-			
+			<div id ="productsslider">
+				<div id ="productstype">
+					<div id ="productstype-options">
+						<select id ="productsselect-options">
+							<option>Music</option>
+							<option>Travel</option>
+							<option>Fashion</option>
+						</select>
+					</div>
+				</div>
+				<div id ="products-ico">
+					<p id ="products">Products...</p>	
+				</div>	
+			</div>
 		</div>
 	</div>
 </section>
