--- a/index.html
+++ b/index.html
@@ -535,8 +535,10 @@
 					<div id ="newstype-options">
 						<select id ="newsselect-options">
 							<option>Music</option>
-							<option>Travel</option>
 							<option>Fashion</option>
+							<option>Celebrities</option>
+							<option>Travel</option>
+
 						</select>
 					</div>
 				</div>
@@ -555,9 +557,9 @@
 				<div id ="productstype">
 					<div id ="productstype-options">
 						<select id ="productsselect-options">
-							<option>Music</option>
-							<option>Travel</option>
 							<option>Fashion</option>
+							<option>Interior Design</option>
+							<option>Web Design</option>
 						</select>
 					</div>
 				</div>
