--- a/index.html
+++ b/index.html
@@ -606,11 +606,23 @@
 <section id ="mixsection">
 
 <div id ="mixintrosection">
-	<div id ="mymixes">
+
+
+	<div id ="hidmyplaylistmixes">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+
+		<div id ="mymixes">
 		<p id ="mixes"> My Mixes </p>
 	</div>
+
+
 	<div id ="intromixes">
-		<p id ="intro"> Music Videos Trailers.</p>
+		<p id ="intro"> Music Video Trailers.</p>
 	</div>
 
 	<div id ="introrec">
@@ -621,8 +633,53 @@
 		
 	</div>
 
+	<div id ="viewalltrailers">
+		<div id ="viewall">
+			<p>View All</p>
+		</div>
+	</div>
+
+	<div id ="viewfullplaylist">
+		<div id ="viewfull">
+			<p>Full Mixes...</p>''
+		</div>
+	</div>
+
 </div>
-<div id ="mixplaylistsection"></div>
+<div id ="mixplaylistsection">
+	<div id ="myplaylistmixes">
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+		<span></span>
+	</div>
+	<div id ="playlistmixes">
+		<p id ="mixesplaylist"> Music Videos Playlist.</p>
+	</div>
+
+	<div id ="playlistrec">
+		<p id ="recplaylist"> Recent....</p>
+	</div>
+
+	<div id ="theplaylist">
+		
+	</div>
+
+	<div id ="viewallplaylist">
+		<div id ="viewall1">
+			<p>View All</p>
+		</div>
+	</div>
+
+	<div id ="viewtrailers">
+		<div id ="viewvideotrailers">
+			<p>Trailers...</p>
+		</div>
+	</div>
+
+
+</div>
 	
 </section>
 <section id ="worksection">
