--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 
 	<div id ="viewfullplaylist">
 		<div id ="viewfull">
-			<p>Full Mixes...</p>''
+			<p>Full Mixes...</p>
 		</div>
 	</div>
 
