--- a/index.html
+++ b/index.html
@@ -647,6 +647,10 @@
 
 </div>
 <div id ="mixplaylistsection">
+
+
+
+
 	<div id ="myplaylistmixes">
 		<span></span>
 		<span></span>
@@ -654,6 +658,14 @@
 		<span></span>
 		<span></span>
 	</div>
+
+
+
+	<div id ="hidmymixes">
+		<p id ="mixess"> My Mixes </p>
+	</div>
+
+
 	<div id ="playlistmixes">
 		<p id ="mixesplaylist"> Music Videos Playlist.</p>
 	</div>
