--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
 
 
 	<div id ="intromixes">
-		<p id ="intro"> Music Video Trailers.</p>
+		<p id ="intro"> Video Mix Trailers.</p>
 	</div>
 
 	<div id ="introrec">
@@ -667,7 +667,7 @@
 
 
 	<div id ="playlistmixes">
-		<p id ="mixesplaylist"> Music Videos Playlist.</p>
+		<p id ="mixesplaylist">Video Mix Playlist.</p>
 	</div>
 
 	<div id ="playlistrec">
@@ -1605,7 +1605,7 @@ $("#viewtrailers").click(function(e){
 
 			$("#viewallplaylist").fadeOut();
 			$("#viewtrailers").fadeOut();
-		$("#mixplaylistsection").delay(1000).animate({height:"0"},{duration:1000}).fadeOut();
+		$("#mixplaylistsection").delay(300).animate({height:"0"},{duration:1000}).fadeOut();
 
 
 
