--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 	<title>Dj Teenez &#174;</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="Dj | Teenez &#174;,Dj | Teenez,Dj Teenez,teenez,Teenez,kenyan,kenyan dj,Sessions by Dj Teenez,Dj | Teenez Launch Party">
+	<meta name="keywords" content="Dj Teenez &#174;,Dj Teenez,Dj teenez,djteenez,teenez,Teenez,kenyan,kenyan dj">
 	<meta name="description" content="From Kenyan Streets To The International Arena. Music, Travel and Photography.">
 
 	<link rel="icon" href="media/logoo.svg">
 	<link rel="stylesheet" href="media/bootstrap.min.css">
 	<link rel="stylesheet" href="media/w3.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link rel="stylesheet" href="media/style.css">
 
 </head>
@@ -860,10 +861,92 @@
 </section>
 <section id ="contactsection">
 	<div id ="ww">
-		<div id ="poo"></div>
-		<div id ="loo"></div>
+		<div id ="contactsec">
+			<p id ="mycontacts">My Contacts</p>
+		</div>
+
+		<div id ="socialsec">
+			<div id ="connectsec">
+				<p id ="myconnectsec">Feel Free To Get In Touch With Me :-</p>		
+			</div>	
+
+			<div id ="phonemail">		
+				<div id ="email">
+					<p>&#128231;  Email </p>
+				</div>
+				<div id ="phone">
+					<p>&#9990;  Phone </p>
+				</div>
+			</div>
+
+
+			<div id ="socials">
+				<div id ="mysocialsec">
+					<p id ="mysocials">My Socials...</p>
+				</div>	
+
+
+				<div id ="socialmedia">
+					<div id ="mysocialmedia">
+<!-- 						<div id ="vimeo"></div>
+						<div id ="vimeo1"></div> -->
+						<!-- <div id ="vimeo"></div>
+						<div id ="vimeo"></div>
+						<div id ="vimeo"></div>
+						<div id ="vimeo"></div> -->
+
+
+						<ul id="social-icons">
+							<li><a><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
+							<li><a><i class="fa fa-mixcloud" aria-hidden="true"></i></a></li>
+							<li><a><i class="fa fa-soundcloud" aria-hidden="true"></i></a></li>
+							<li><a><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+							<li><a><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+
+						</ul>
+
+
+
+
+					</div>
+				</div>	
+
+
+			</div>
+
+
+		</div>
+
 	</div>
-	<div id ="zz"></div>
+	<div id ="zz">
+		<div id="yy">
+			<div id="xx">
+				<p id="www">Prefer Writing Directly?</p>
+			</div>
+
+			<div id="vvv">
+				<form id="moo" action="#" method="get">
+					<div id="more">
+						<input id="moree" type="text" class="form-control" placeholder="Name" name="name">
+
+						<input id="moreee" type="email" class="form-control" placeholder="Email" name="email">
+
+					</div>
+
+					<div id="mso">
+						<textarea id="morse" placeholder="Write  Me A Message" rows="7" name="message"></textarea>
+					</div>
+					<div id="meso">
+						<input type="submit" id="morsey" value="SEND MESSAGE">
+					</div>
+				</form> 
+					
+			</div>
+
+			</div>
+		</div>
+	</div>
 </section>
 
 
