--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
 					<p>&#128231;  Email </p>
 				</div>
 				<div id ="phone">
-					<p>&#9990;  Phone </p>
+					<p>&#9990;  Phones </p>
 				</div>
 			</div>
 
